--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
+    <h1>Hello</h1>
+    <p>Jeg hedder Cathrine .</p>
 </body>
 
 </html>
